--- a/wyyx.html
+++ b/wyyx.html
@@ -268,17 +268,332 @@
 						</div>
 					</li>
 					<li>
-	<!-- 					<div class="php2">
-							<a href=""></a>
+						<div>
+							<div class="php2">
+								<a href=""></a>
+							</div>
+							<div class="xpsf_bottom2">
+								<div>
+									<a href="">真爱一生 AKOYA珍珠14K项链</a>
+								</div>
+								<span>￥1699</span>
+							</div>
 						</div>
-						<div class="xpsf_bottom2">
-							<a href="">真爱一生 AKOYA珍珠14K项链</a>
-							<span>￥1699</span>
-						</div> -->
 					</li>
-					<li></li>
-					<li></li>
+					<li>
+						<div>
+							<div class="php3">
+								<a href=""></a>
+							</div>
+							<div class="xpsf_bottom2">
+								<div>
+									<a href="">真爱一生 AKOYA珍珠14K耳钉</a>
+								</div>
+								<span>￥1699</span>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div>
+							<div class="php4">
+								<a href=""></a>
+							</div>
+							<div class="xpsf_bottom1"> 
+								<div class="xpsf_bottom1_1">
+									<span>七夕推荐</span>
+									<span>限时购</span>
+								</div>
+								<p>
+									<a href="">真爱佳酿 6款组合葡萄酒</a>
+								</p>
+								<div class="xpsf_bottom1_2">
+									<span>￥388</span>
+									<span>￥478</span>
+								</div>
+							</div>
+						</div>
+					</li>
 				</ul>
+			</div>
+		</div>
+		<div class="rqtj_bg">
+			<div class="rqtj">
+				<div class="rqtj_top">
+					<div class="xqsf_top_left">
+						<a href="#">
+							<h3>人气推荐</h3>
+						</a>
+					</div>
+					<div class="rqtj_top_center">
+						<div><a href="">编辑推荐</a></div>
+						<div><a href="">热销总榜</a></div>
+					</div>
+					<div class="rqtj_top_right">
+						<a href="#">
+							更多制造商&nbsp;&nbsp;>
+						</a>
+					</div>
+				</div>
+				<div class="rqtj_body">
+					<ul>
+						<li class="rqtj1">
+							<div>
+								<div class="rqtj_11">
+									<img src="./images/rq1.png" alt="">
+								</div>
+								<div class="rqtj_22"> 
+									<div class="rqtj_22_1">
+										<span>&nbsp;赠品&nbsp;</span>
+										<p>
+											<a href="#">AB面独立弹簧床垫 进口乳胶</a>
+										</p>
+										<div class="rqtj_22_2">
+											<span>￥2599</span>
+										</div>
+								    </div>
+								</div>
+							</div>
+						</li>
+						<li class="rqtj2">
+							<div>
+								<div class="rqtj_2_1">
+									<img src="./images/rq2.png" alt="">
+								</div>
+								<div class="rqtj_2_2"> 
+									<div class="rqtj_2_21">
+										<span>&nbsp;赠品&nbsp;</span>
+										<span>&nbsp;满额减&nbsp;</span>
+										<p>
+											<a href="#"> 超冷感吸放湿双面夏凉被</a>
+										</p>
+										<div class="rqtj_2_22">
+											<span>￥219</span>
+										</div>
+								    </div>
+								</div>
+							</div>
+						</li>
+						<li class="rqtj2">
+							<div>
+								<div class="rqtj_2_1">
+									<img src="./images/rq3.png" alt="">
+								</div>
+								<div class="rqtj_2_2"> 
+									<div class="rqtj_2_21">
+										<p>
+											<a href="#">  24寸 纯PC“铝框”（非全铝）</a>
+										</p>
+										<div class="rqtj_2_22">
+											<span>￥389</span>
+										</div>
+								    </div>
+								</div>
+							</div>
+						</li>
+						<li class="rqtj2">
+							<div>
+								<div class="rqtj_2_1">
+									<img src="./images/rq4.png" alt="">
+								</div>
+								<div class="rqtj_2_2"> 
+									<div class="rqtj_4_21">
+										<p>
+											<a href="#"> 多功能私享按摩椅</a>
+										</p>
+										<div class="rqtj_2_22">
+											<span>￥1999</span>
+										</div>
+								    </div>
+								</div>
+							</div>
+						</li>
+						<li class="rqtj2">
+							<div>
+								<div class="rqtj_2_1">
+									<img src="./images/rq5.png" alt="">
+								</div>
+								<div class="rqtj_2_2"> 
+									<div class="rqtj_5_21">
+										<span>&nbsp;服装特惠&nbsp;</span>
+										<span>&nbsp;满赠&nbsp;</span>
+										<p>
+											<a href="#"> 黑凤梨 女式真丝睡衣</a>
+										</p>
+										<div class="rqtj_5_22">
+											<span>￥495.38</span>
+											<span>￥799</span>
+										</div>
+								    </div>
+								</div>
+							</div>
+						</li>
+						<li class="rqtj2">
+							<div>
+								<div class="rqtj_2_1">
+									<img src="./images/rq6.png" alt="">
+								</div>
+								<div class="rqtj_2_2"> 
+									<div class="rqtj_2_21">
+										<span>&nbsp;赠品&nbsp;</span>
+										<span>&nbsp;满赠&nbsp;</span>
+										<p>
+											<a href="#">  日式和风声波式电动牙刷（可单</a>
+										</p>
+										<div class="rqtj_2_22">
+											<span>￥129</span>
+										</div>
+								    </div>
+								</div>
+							</div>
+						</li>
+						<li class="rqtj2">
+							<div>
+								<div class="rqtj_2_1">
+									<img src="./images/rq7.png" alt="">
+								</div>
+								<div class="rqtj_2_2"> 
+									<div class="rqtj_2_21">
+										<p>
+											<a href="#"> 德式轻量保温杯</a>
+										</p>
+										<div class="rqtj_2_22">
+											<span>￥119</span>
+										</div>
+								    </div>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="xsg">
+			<div class="xsg_top">
+				<div class="xsg_left">
+					<a href="">限时购</a>
+				</div>
+				<div class="xsg_right">
+					<a href="">更多抢购 ></a>
+				</div>
+			</div>
+			<div class="xsg_body">
+				<ul>
+					<li class="xsg_body_left">
+						<a href=""></a>
+						<div class="dianchanng14">14点场</div>
+						<div id="hengxian"></div>
+						<div>距离结束还剩</div>
+						<div class="time">
+							<div>03</div>
+							<div>:</div>
+							<div>30</div>
+							<div>:</div>
+							<div>30</div>
+						</div>
+						<div>查看全部</div>
+					</li>
+					<li class="xsg_body1">
+						<div>
+							<img class="xsg_img" src="./images/xsg1.png" alt="">
+						</div>
+						<div class="xsg_body2">
+							<h2>
+								<a href="" id="xsg_a">牛皮十字纹皮带-均码可裁剪</a>
+							</h2>
+							<p>商务十字纹，彰显品质</p>
+							<div class="xsg_body1_3">
+								<div></div>
+								<div>还剩400件</div>
+							</div>
+							<div class="xsg_body1_4">
+								<span>限时价</span>
+								<span>￥164.5</span>
+								<span>原价</span>
+								<span>￥299</span>
+							</div>
+							<a href="">立即抢购</a>
+						</div>
+					</li>
+					<li class="xsg_body1">
+						<div>
+							<img class="xsg_img" src="./images/f958c8b4e8d6dfa7fc574bd06b530821.png" alt="">
+						</div>
+						<div class="xsg_body2">
+							<h2>
+								<a href="" id="xsg_a">羊脂玉白紫金线茶具套装</a>
+							</h2>
+							<p>1壶4杯1公杯，雅致茶组</p>
+							<div class="xsg_body1_3">
+								<div></div>
+								<div>还剩400件</div>
+							</div>
+							<div class="xsg_body1_4">
+								<span>限时价</span>
+								<span>￥263.5</span>
+								<span>原价</span>
+								<span>￥339</span>
+							</div>
+							<a href="">立即抢购</a>
+						</div>
+					</li>
+					<li class="xsg_body1">
+						<div>
+							<img class="xsg_img" src="./images/25c7279ef37c6836bb6010d03f8a5caf.png" alt="">
+						</div>
+						<div class="xsg_body2">
+							<h2>
+								<a href="" id="xsg_a">磨砂感飞行员墨镜</a>
+							</h2>
+							<p>HUGO BOSS制造商出品</p>
+							<div class="xsg_body1_3">
+								<div></div>
+								<div>还剩400件</div>
+							</div>
+							<div class="xsg_body1_4">
+								<span>限时价</span>
+								<span>￥97.3</span>
+								<span>原价</span>
+								<span>￥139</span>
+							</div>
+							<a href="">立即抢购</a>
+						</div>
+					</li>
+					<li class="xsg_body1">
+						<div>
+							<img class="xsg_img" src="./images/0367eae4284e98f3d06478da2071435e.png" alt="">
+						</div>
+						<div class="xsg_body2">
+							<h2>
+								<a href="" id="xsg_a">升级款日式针织羽丝绒夏凉被</a>
+							</h2>
+							<p>亲肤透气，裸睡空调房好搭档</p>
+							<div class="xsg_body1_3">
+								<div></div>
+								<div>还剩400件</div>
+							</div>
+							<div class="xsg_body1_4">
+								<span>限时价</span>
+								<span>￥134.3</span>
+								<span>原价</span>
+								<span>￥179</span>
+							</div>
+							<a href="">立即抢购</a>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="fls">
+			<div class="fls-center">
+				<div class="fls-top">
+					<div class="fls-left">
+						<a href="">福利社</a>
+					</div>
+					<div class="fls-right">
+						<a href="">查看更多福利</a>
+					</div>
+				</div>
+				<div class="fls-body"></div>
 			</div>
 		</div>
 	</div>
